# utilities

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/apps/deserializer/: CMakeLists.txt  deserial.cpp
src/apps/example/: example.cpp
test/regression/: CMakeLists.txt  regression.cpp
